--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://aksionau.com",
     "email": "anton.aksionau@gmail.com"
   },
+  "license": "CC BY-NC-SA 4.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
