update license field

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://aksionau.com",
     "email": "anton.aksionau@gmail.com"
   },
-  "license": "CC BY-NC-SA 4.0",
+  "license": "SEE LICENSE IN LICENSE.md",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
