--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "litegraph.js": "^0.7.14",
     "nanoid": "^4.0.2",
     "pinia": "^2.0.22",
+    "sd-prompt-parser": "^0.0.2",
     "vue": "^3.2.39",
     "vue-router": "^4.1.5"
   },
