--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "compressorjs": "^1.2.1",
     "exifr": "^7.1.3",
     "litegraph.js": "^0.7.14",
     "nanoid": "^4.0.2",
